# sd-simconnect

./: .gitmodules  CMakeLists.txt  README.md  logger.hpp  main.cpp  simconnect.hpp  streamdeck.hpp
src/net.kuma777.simconnect.sdPlugin/: manifest.json
